--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<title> Веб-разработка 4.0 </title>
-	<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-<h1>Заголовок первого уровня</h1>
-<p class="first">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam est at dolor ad reprehenderit nam sequi. Mollitia ipsa nostrum laboriosam possimus, aperiam quis rem minus, eos eaque debitis necessitatibus provident vitae at sequi, modi assumenda consequuntur impedit ullam facere quos.</p>
-<h2>Заголовок второго уровня</h2>
-<p><b><u>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, veritatis voluptas? Voluptate ut nulla a fugiat excepturi accusantium nobis deserunt. Quasi pariatur, suscipit voluptate obcaecati provident quis et iure aut possimus, repellendus quibusdam soluta eligendi, rerum accusamus quam minima a in reprehenderit eum debitis beatae sed repudiandae incidunt hic! Omnis.</u></b></p>
-<h3>Сергей Есенин</h3>
-<p>Пой же, пой. На проклятой гитаре<br> 
-Пальцы пляшут твои вполукруг<br> 
-Захлебнуться бы в этом угаре,<br> 
-Мой последний, единственный друг. </p>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <h1 class="text-center">Урок 7! Фреймворк Bootstrap</h1>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
